welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:4: error: too many arguments for method run: ()Unit
run(3);
   ^